<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:id="@+id/login_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@color/purple_200"
            android:contentDescription="@string/user_portrait"/>

        <EditText
            android:id="@+id/userId"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:hint="@string/userId_hint"
            android:gravity="center"/>

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:hint="@string/userPassword_hint"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy_tip"></TextView>
        </LinearLayout>

        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/green"
            android:text="@string/login_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/phone_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_login"
            android:layout_weight="1"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="15sp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password"
            android:layout_weight="1"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="15sp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>